Fix container max size and make navbar static on mobile

--- a/app/styles/blocks/_header-navbar.scss
+++ b/app/styles/blocks/_header-navbar.scss
@@ -45,9 +45,9 @@
 }
 
 .navbar {
-  height: $navbar-height-sm;
+  min-height: $navbar-height-sm;
   @media (min-width:$navbar-lg-min) {
-    height: $navbar-height-lg;
+    min-height: $navbar-height-lg;
   }
 }
 
